Include exercise4.js in index.html

--- a/17 E2015 Part II/index.html
+++ b/17 E2015 Part II/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chapter 17 - Exercises</title>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>  
 </head>
 <body>
   <script src="./exercise1.js"></script>
   <script src="./exercise2.js"></script>
   <script src="./exercise3.js"></script>
+  <script src="./exercise4.js" defer></script>
 </body>
 </html>
